# ChangeLog for sci-physics/vgm
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Jan 2013; Sébastien Fabbro <bicatali@gentoo.org> vgm-3.06.ebuild:
  Updated minimum geant4 version, thanks Oliver Freyermuth

*vgm-3.06 (18 Jan 2013)

  18 Jan 2013; Sébastien Fabbro <bicatali@gentoo.org> +vgm-3.06.ebuild,
  +metadata.xml:
  Initial import
