@@ -1,6 +1,10 @@
 # ChangeLog for sci-physics/vgm
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  22 Mar 2014; <o.freyermuth@googlemail.com> vgm-3.06.ebuild:
+  Address ebuild-issues: Use zip-snapshot instead of repo-tag, add missing die,
+  fix typo in description. 
 
   21 Jan 2013; Sébastien Fabbro <bicatali@gentoo.org> vgm-3.06.ebuild:
   Updated minimum geant4 version, thanks Oliver Freyermuth
